--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "bootstrap": "^5.3.0",
     "mdb-react-ui-kit": "^6.1.0",
     "react-bootstrap": "^2.7.4"
   }
