--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "programming-thoughts",
+  "name": "bark-buddy",
   "version": "1.0.0",
   "description": "",
   "main": "server/server.js",
@@ -17,7 +17,7 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.4.0",  
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -26,4 +26,3 @@
     "react-bootstrap": "^2.7.4"
   }
 }
-
